--- a/Vue/221031/test/03_html_vue.html
+++ b/Vue/221031/test/03_html_vue.html
@@ -9,12 +9,20 @@
 <body>
   <div id="app">
     <p id="name">name : {{ message }} </p>
-    <input id="inputName" type="text" v-model="message">
+    <!-- <p id="name">name : {{ message2 }} </p> -->
+    <input type="text" v-model="message">
+    <!-- <input type="text" v-model="message2"> -->
   </div>
   
   <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
   <script>
-    
+    const app = new Vue({
+      el: '#app',
+      data: {
+        message: '',
+        // message2: '',
+      },
+    })
   </script>
 </body>
 </html>
